objects/SalesOrgMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language</description>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_email__c</fullName>
        <label>Renewal email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Desc__c</fullName>
        <description>Sales Org Description</description>
        <label>Sales Org Desc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Business_Address1__c</fullName>
        <label>TR Business Address1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR_Business_Address_City__c</fullName>
        <label>TR Business Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Business_Address_Zip__c</fullName>
        <label>TR Business Address Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR_Business_Address__c</fullName>
        <description>Business Address</description>
        <label>TR Business Address</label>
        <type>TextArea</type>
    </fields>
    <label>Sales Org Mapping</label>
</CustomObject>